--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1160,180 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"着信"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"通知"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"フィードバック"</string>
-    <!-- Added for CM -->
-    <string name="mod_version">"Modバージョン"</string>
-    <string name="mod_version_default">"不明"</string>
-    <string name="cm_settings_title">CyanogenMod設定</string>
-    <string name="adb_notify">"USBデバッグを通知する"</string>
-    <string name="cpu_info">CPU情報</string>
-    <string name="mem_info">メモリ情報(空き/トータル)</string>
-
-    <string name="adb_notify_summary">"USBデバッグが接続されたら通知を表示する"</string>
-    <string name="kill_app_longpress_back">"長押しでアプリを終了"</string>
-    <string name="kill_app_longpress_back_summary">"戻るボタンを長押しすることでフォアグラウンドアプリケーションを終了させる"</string>
-    <string name="launcher_settings_title">ADWLauncher</string>
-
-    <!-- Display settings screen, notification light repeat blinking title -->
-    <string name="notification_blink_title">"通知ライトを点滅させる"</string>
-    <!-- Display settings screen, notification light repeat blinking summary -->
-    <string name="notification_blink_summary">"緑の通知ライトを繰り返し点滅させる"</string>
-    <!-- Display settings screen, notification light always on title -->
-    <string name="notification_always_on_title">"常に通知ライトを有効にする"</string>
-    <!-- Display settings screen, notification light always on summary -->
-    <string name="notification_always_on_summary">"スクリーンオン時のみ通知ライトを有効にする"</string>
-    <!-- Display settings screen, notification light while charging title -->
-    <string name="notification_charging_title">"充電ライト"</string>
-    <!-- Display settings screen, notification light while charging summary -->
-    <string name="notification_charging_summary">"充電中はアンバーのライトを点灯する"</string>
-
-    <string name="possibleButtons">"可能なボタン"</string>
-    <string name="toggleWifi">"Wi-Fiトグル"</string>
-    <string name="toggleWifiAp">"ポータブルアクセスポイントトグル"</string>
-    <string name="toggleBluetooth">"Bluetoothトグル"</string>
-    <string name="toggleGPS">"GPSトグル"</string>
-    <string name="toggleData">"モバイルデータトグル"</string>
-    <string name="toggleSync">"データ同期トグル"</string>
-    <string name="toggle2g3g">"2G/3Gトグル"</string>
-    <string name="toggleSound">"サウンドトグル"</string>
-    <string name="toggleBrightness">"明るさトグル"</string>
-    <string name="toggleAutoRotate">"回転トグル"</string>
-    <string name="toggleScreenTimeout">"スクリーンタイムアウト"</string>
-    <string name="toggleAirplane">"機内モードトグル"</string>
-    <string name="toggleFlashlight">"フラッシュライトトグル"</string>
-    <string name="toggleLockScreen">"ロックスクリーントグル"</string>
-
-    <string name="toggleWifiDescription">"Wi-Fi有効/無効"</string>
-    <string name="toggleWifiApDescription">"ポータブルアクセスポイント有効/無効"</string>
-    <string name="toggleBluetoothDescription">"Bluetooth有効/無効"</string>
-    <string name="toggleGPSDescription">"GPS有効/無効"</string>
-    <string name="toggleDataDescription">"モバイルデータ通信有効/無効"</string>
-    <string name="toggleSyncDescription">"データ同期有効/無効"</string>
-    <string name="toggle2g3gDescription">"2Gと3Gの切り替え"</string>
-    <string name="toggleSoundDescription">"サウンド/振動モードの切替"</string>
-    <string name="toggleBrightnessDescription">"明るさレベルの切替"</string>
-    <string name="toggleAutoRotateDescription">"回転センサ有効/無効"</string>
-    <string name="toggleScreenTimeoutDescription">"異なるスクリーンタイムアウトをセット"</string>
-    <string name="toggleAirplaneDescription">"機内モードの切替"</string>
-    <string name="toggleFlashlightDescription">"フラッシュライトモードの切替"</string>
-    <string name="toggleLockScreenDescription">"ロックスクリーンの有効/無効"</string>
-
-    <string name="widgetSettings">"ウィジェット設定"</string>
-    <string name="wifiSettings">"Wi-Fiイベント"</string>
-    <string name="dataSettings">"データイベント"</string>
-    <string name="powerSettings">"電源イベント"</string>
-    <string name="generalSettings">"一般設定"</string>
-
-    <string name="autoDisable3G">"3Gの自動無効"</string>
-    <string name="autoEnable3G">"3Gの自動有効"</string>
-    <string name="useRoundCorners">"角を丸くする"</string>
-    <string name="useVertical">"縦配置を使用"</string>
-    <string name="useTransparent">"透明なウィジェット"</string>
-    <string name="autoEnableSyncWithWifi">"同期の自動有効"</string>
-    <string name="autoDisableSyncWithWifi">"同期の自動無効"</string>
-    <string name="autoDisable3GWithWifi">"Wi-Fi接続時は3G無効"</string>
-    <string name="autoEnable3GWithWifi">"Wi-Fi切断時は3G有効"</string>
-    <string name="ringModeVibrateAsOn">"振動モードをONとする"</string>
-    <string name="monitorDataRoaming">"データローミングのモニタ"</string>
-    <string name="autoEnableBluetoothWithPower">"外部電源接続時にBluetooth有効"</string>
-    <string name="autoDisableBluetoothWithPower">"外部電源切断時にBluetooth無効"</string>
-    <string name="autoEnableWifiWithPower">"外部電源接続時にWi-Fi有効"</string>
-    <string name="autoDisableWifiWithPower">"外部電源切断時にWi-Fi無効"</string>
-
-    <string name="autoDisable3GDescription">"モバイルデータ通信無効時は2G"</string>
-    <string name="autoEnable3GDescription">"モバイルデータ通信有効時は3G"</string>
-    <string name="useRoundCornersDescription">"ウィジェットの角を丸くする"</string>
-    <string name="useTransparentDescription">"ウィジェット背景を透明にする"</string>
-    <string name="useVerticalDescription">"縦向きの配置で表示する"</string>
-
-    <string name="autoEnableSyncWithWifiDescription">"Wi-Fi接続時にデータ同期を有効にする"</string>
-    <string name="autoDisableSyncWithWifiDescription">"Wi-Fi切断時にデータ同期を無効にする"</string>
-    <string name="autoDisable3GWithWifiDescription">"Wi-Fiに接続したら2Gにする"</string>
-    <string name="autoEnable3GWithWifiDescription">"Wi-Fiを切断したら3Gにする"</string>
-    <string name="ringModeVibrateAsOnDescription">"振動モードのときトグルON表示にする"</string>
-    <string name="monitorDataRoamingDescription">"データローミング時に、ステータスを赤くする"</string>
-    <string name="autoEnableBluetoothWithPowerDescription">"外部電源に接続したらBluetoothを有効にする"</string>
-    <string name="autoDisableBluetoothWithPowerDescription">"外部電源から切断したらBluetoothを無効にする"</string>
-    <string name="autoEnableWifiWithPowerDescription">"外部電源に接続したらWi-Fiを有効にする"</string>
-    <string name="autoDisableWifiWithPowerDescription">"外部電源から切断したらWi-Fiを無効にする"</string>
-
-    <!-- OpenVPN settings -->
-    <string name="vpn_openvpn_port">"サーバポート番号"</string>
-    <string name="vpn_openvpn_protocol">"使用するプロトコル"</string>
-    <string name="vpn_openvpn_device">"使用するデバイス"</string>
-    <string name="vpn_openvpn_userauth">"ユーザ認証"</string>
-    <string name="vpn_openvpn_userauth_summary">"追加のユーザ認証が必要な場合設定する"</string>
-    <string name="vpn_openvpn_advanced_titlebar">"追加のOpenVPN設定"</string>
-    <string name="vpn_openvpn_comp_lzo">"LZO圧縮"</string>
-    <string name="vpn_openvpn_comp_lzo_summary">"LZO圧縮を有効にする"</string>
-    <string name="vpn_openvpn_redirect_gateway_title">"リダイレクトゲートウェイ"</string>
-    <string name="vpn_openvpn_redirect_gateway_summary">"すべてのトラフィックをOpenVPN経由にする"</string>
-    <string name="vpn_openvpn_set_addr">"リモートによるアドレス設定"</string>
-    <string name="vpn_openvpn_set_addr_summary">"トンネルアドレスを手動で設定す>るにはチェックを外す"</string>
-    <string name="vpn_openvpn_set_local_addr">"ローカルIPアドレス"</string>
-    <string name="vpn_openvpn_set_remote_addr">"リモートIPアドレス"</string>
-    <string name="vpn_openvpn_set_cipher">"暗号化アルゴリズム"</string>
-    <string name="vpn_openvpn_set_cipher_message">"デフォルトを使うには空にしてください"</string>
-    <string name="vpn_openvpn_set_keysize">"暗号キーのサイズ"</string>
-    <string name="vpn_openvpn_set_keysize_message">"デフォルトを使うには空にしてください"</string>
-    <string name="vpn_openvpn_set_extra">"追加引数"</string>
-    <string name="vpn_openvpn_set_extra_message">"追加のコマンドライン引数を入力してください"</string>
-
-    <string name="networkModeSpinner">"ネットワークモードの選択"</string>
-    <string name="brightnessSpinner">"明るさレベルの選択"</string>
-    <string name="ringModeSpinner">"着信音モードの選択"</string>
-    <string name="screenTimeoutSpinner">"スクリーンタイムアウトの選択"</string>
-    <string name="backgroundImageSpinner">"背景を選択"</string>
-
-    <string name="notConfigured">"未設定 もう一度追加してください"</string>
-    <string name="ok">OK</string>
-
-    <!-- Widget Picker -->
-    <string name="widget_count">"(%d個のウィジェット)"</string>
-
-    <!-- device hostname -->
-    <string name="device_hostname">端末のホスト名</string>
-    <!-- Button when saving a device hostname -->
-    <string name="hostname_save">保存</string>
-    <!-- Button when cancelling hostname change -->
-    <string name="hostname_cancel">キャンセル</string>
-
-    <string name="bluetooth_profile_hid">HID</string>
-    <string name="bluetooth_summary_connected_to_hid">HIDデバイスに接続</string>
-
-    <!-- Profile settings -->
-    <string name="profile_settings_title">プロファイル</string>
-    <string name="soundtone_title">通知音</string>
-    <string name="profile_title">プロファイル設定</string>
-    <string name="profile_appgroup_list_title">アプリグループ設定</string>
-    <string name="sound_mode">通知モード</string>
-    <string name="ringer_mode">着信音モード</string>
-    <string name="lights_mode">ライトモード</string>
-    <string name="vibrate_mode">振動モード</string>
-    <string name="choose_soundtone">通知音を選択</string>
-    <string name="choose_ringtone">着信音を選択</string>
-    <string name="profile_settings">プロファイル設定</string>
-    <string name="profile_name">プロファイル名</string>
-    <string name="profile_summary">タッチしてプロファイルを設定</string>
-    <string name="profile_appgroup_title">アプリグループ: %s</string>
-    <string name="profile_appgroups_title">アプリグループ</string>
-    <string name="profile_applist_title">アプリ - クリックしてグループから削除</string>
-    <string name="profile_appgroup_name_prompt">アプリグループの名前を入力してください</string>
-    <string name="profile_delete">プロファイルの削除</string>
-    <string name="profile_delete_confirm">このプロファイルを削除してもよろしいですか？</string>
-    <string name="profile_app_delete_confirm">このアプリをグループから削除してもよろしいですか？</string>
-    <string name="profile_choose_app">アプリ選択</string>
-    <string name="profile_settings_header">プロファイル設定: %s</string>
-    <string name="profile_group_header">プロファイル: %1$s カテゴリ: %2$s</string>
-    <string name="menu_appgroups">アプリグループの管理</string>
-    <string name="menu_new_profile">新規プロファイル</string>
-    <string name="menu_new_profile_summary">新しいプロファイルを追加して設定する</string>
-    <string name="profile_menu_delete">削除</string>
-    <string name="profile_new_appgroup">新規アプリグループ</string>
-    <string name="profile_delete_appgroup">このグループを削除する</string>
-    <string name="profile_add_app">アプリを追加</string>
-    <string name="profile_manage">プロファイルの管理</string>
-    <string name="profile_appgroups_manage">アプリグループの管理</string>
-    <string name="profile_applist_manage">アプリリストの管理</string>
-    <string name="new_profile_name">&lt;新規プロファイル&gt;</string>
-    <string name="profile_cannot_delete">アクティブなプロファイルを削除することはできません</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G設定"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"4Gネットワークとモデムの設定と管理"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MACアドレス"</string>
 </resources>
