--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2818,6 +2818,10 @@ found in the list of installed applications.</string>
     <string name="hotspot_gadget_title">Hotspot Toggle</string>
     <string name="hotspot_gadget_caption">Hotspot</string>
 
+    <!-- Tether Widget -->
+    <string name="tether_gadget_title">USB Tether Toggle</string>
+    <string name="tether_gadget_caption">USB Tether</string>
+
     <string name="wimax_settings">4G settings</string>
     <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
     <string name="status_wimax_mac_address">4G MAC address</string>
